feat: Spring Boot upgrade to 3.5.11: extra related changes: dependency management is improved (in the most cases trusted to Spring). Bump dependencies: bouncycastle to 1.80, guava to 32.0.1-jre, mockito-core and mockito-junit-jupiter to 5.23.0, springdoc-openapi-starter-webmvc-ui to 2.8.16, spring-security-web to 6.5.9, maven-compiler-plugin to 3.15.0. @Serial annotation is added to serialVersionUID fields. Some modern syntax replacements are made. Clover plugin is removed.