@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import static org.qubership.automation.itf.core.util.converter.IdConverter.toBig
 
 import java.math.BigInteger;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -44,7 +43,6 @@ import org.qubership.automation.itf.core.util.config.ApplicationConfig;
 import org.qubership.automation.itf.core.util.db.TxExecutor;
 import org.qubership.automation.itf.core.util.exception.StorageException;
 import org.qubership.automation.itf.core.util.manager.CoreObjectManager;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.repository.query.Param;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -58,7 +56,6 @@ public class StubProjectObjectManager extends AbstractObjectManager<StubProject,
 
     private final StubProjectRepository stubProjectRepository;
 
-    @Autowired
     public StubProjectObjectManager(StubProjectRepository repository) {
         super(StubProject.class, repository);
         this.stubProjectRepository = repository;
@@ -220,10 +217,10 @@ public class StubProjectObjectManager extends AbstractObjectManager<StubProject,
     }
 
     private void createDatasetFolder(BigInteger projectId) {
-        Path newDataSetFolder = Paths.get(Objects.requireNonNull(ApplicationConfig.env.getProperty(WORKING_DIRECTORY)),
+        Path newDataSetFolder = Path.of(Objects.requireNonNull(ApplicationConfig.env.getProperty(WORKING_DIRECTORY)),
                 "dataset").resolve(String.valueOf(projectId));
         if (!newDataSetFolder.toFile().mkdirs()) {
-            throw new StorageException(String.format("DataSet folder for project %d hasn't been created.", projectId));
+            throw new StorageException("DataSet folder for project %d hasn't been created.".formatted(projectId));
         }
     }
 }
