@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,7 +16,7 @@
 
 package org.qubership.automation.itf.core.model.jpa.message.parser;
 
-import jakarta.persistence.Entity;
+import java.io.Serial;
 
 import org.qubership.automation.itf.core.model.common.Storable;
 import org.qubership.automation.itf.core.model.jpa.system.operation.Operation;
@@ -29,6 +29,7 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.ObjectIdGenerators;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+import jakarta.persistence.Entity;
 import lombok.NoArgsConstructor;
 
 @Entity
@@ -37,6 +38,7 @@ import lombok.NoArgsConstructor;
 @JsonIdentityInfo(generator = ObjectIdGenerators.PropertyGenerator.class,
         property = "id", scope = OperationParsingRule.class)
 public class OperationParsingRule extends AbstractParsingRule<Operation> {
+    @Serial
     private static final long serialVersionUID = 20240812L;
 
     @SuppressFBWarnings(value = "BC_UNCONFIRMED_CAST", justification = "Only Operation objects are here")
@@ -60,6 +62,6 @@ public class OperationParsingRule extends AbstractParsingRule<Operation> {
     @Override
     @JsonIgnore
     public String getParsingRulePath() {
-        return String.format("system '%s' operation '%s'", getParent().getParent().getName(), getParent().getName());
+        return "system '%s' operation '%s'".formatted(getParent().getParent().getName(), getParent().getName());
     }
 }
